[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
enum-map = "2.7.3"
eyre = "0.6.12"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
serde_with = "3.9.0"
strum = { version = "0.27.1", features = ["derive"] }
time = { version = "0.3.36", features = ["parsing", "serde"] }
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
url = "2.5.2"
