[package]
name = "task-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { path = "../sdk" }
enum-map = "2.7.3"
eyre = "0.6.12"
moro = "0.4.0"
slotmap = "1.0.7"
strum = { version = "0.26.3", features = ["derive"] }
time = { version = "0.3.36", features = ["parsing", "serde"] }
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
